--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.nanolyze</groupId>
 	<artifactId>tiff</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>tiff</name>
 	<description>Nanolyze assignment</description>
 	<properties>
